[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/turret.png" type="Texture" id=1]
[ext_resource path="res://Attack.gd" type="Script" id=2]
[ext_resource path="res://Assets/New Piskel.png" type="Texture" id=3]
[ext_resource path="res://Assets/image.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.3617, 14.8814 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Attack" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AttackRight" type="CollisionShape2D" parent="."]
position = Vector2( 17.8703, -7.71526 )
scale = Vector2( 3, 2 )
shape = SubResource( 1 )

[node name="AttackLeft" type="CollisionShape2D" parent="."]
position = Vector2( -17.7931, -8.26023 )
scale = Vector2( 3, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.34902 )
position = Vector2( 0, -30.8345 )
scale = Vector2( 3, 2 )
texture = ExtResource( 1 )

[node name="AnimatedSpriteRight2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 13.2511, -4.05812 )
rotation = 0.261799
scale = Vector2( 0.9, 1.2 )
frames = SubResource( 22 )
speed_scale = 5.0

[node name="AnimatedSpriteLeft2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -13.0741, -3.63313 )
rotation = -0.261799
scale = Vector2( 0.9, 1.2 )
frames = SubResource( 22 )
speed_scale = 5.0
flip_h = true

[node name="AnimatedSpriteRight" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -32.443, -6.50674 )
rotation = -0.174533
scale = Vector2( 1.5, 3 )
frames = SubResource( 9 )
speed_scale = 10.0

[node name="AnimatedSpriteLeft" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 34.0179, -7.45169 )
rotation = 0.174533
scale = Vector2( 1.5, 3 )
frames = SubResource( 9 )
speed_scale = 10.0
flip_h = true
